@@ -654,6 +654,16 @@
                     type="bool"
                     default=false
                 [/key]
+                [key]
+                    name="fixed_width"
+                    type="f_unsigned"
+                    default=""
+                [/key]
+                [key]
+                    name="fixed_height"
+                    type="f_unsigned"
+                    default=""
+                [/key]
             [/tag]
         [/tag]
         [tag]
@@ -2333,6 +2343,16 @@
                             name="linked_group"
                             type="string"
                             default=0
+                        [/key]
+                        [key]
+                            name="fixed_width"
+                            type="f_unsigned"
+                            default=""
+                        [/key]
+                        [key]
+                            name="fixed_height"
+                            type="f_unsigned"
+                            default=""
                         [/key]
                     [/tag]
                     [tag]
