@@ -27,6 +27,7 @@ Version 1.13.10+dev:
    * Greatly improved behavior of sliders.
    * Fixed crash when modifying an existing friend entry in Preferences.
    * Fixed players being unable to start campaigns in MP mode.
+   * Added new fixed_width and fixed_height keys to GUI2 widgets.
  * WML Engine:
    * File paths with backslashes are no longer allowed. This ensures that a UMC
      author can't accidentally use them and make an add-on that breaks on
